kubernetes/seedbox/h5ai.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: seedbox
  name: h5ai
  labels:
    app: h5ai
spec:
  selector:
    app: h5ai
  ports:
    - port: 80
      targetPort: h5ai-port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: seedbox
  name: seedbox
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: seedbox.archifleks.net
      http:
        paths:
          - backend:
              serviceName: h5ai
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: seedbox
  name: h5ai
  labels:
    app: h5ai
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: h5ai
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: h5ai
          image: "vsense/h5ai"
          imagePullPolicy: Always
          ports:
            - name: h5ai-port
              containerPort: 80
          volumeMounts:
            - name: h5ai-directory
              mountPath: /var/www
      volumes:
        - name: h5ai-directory
          hostPath:
            path: /srv/seedbox
