kubernetes/seedbox/rancher.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: rancher
  labels:
    app: rancher
spec:
  type: ClusterIP
  selector:
    app: rancher
  ports:
    - port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: rancher
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: rancher.archifleks.net
      http:
        paths:
          - backend:
              serviceName: rancher
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: kube-system
  name: rancher
  labels:
    app: rancher
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
        - name: rancher
          image: "rancher/server:v2.0.0-alpha10"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: rancher-db
              mountPath: /var/lib/mysql
      volumes:
        - name: rancher-db
          hostPath:
            path: /srv/configs/rancher
